# jointhedots

./: Cargo.toml  LICENSE  README.md
.github/workflows/: coverage.yml  release.yml  test.yml
src/: cli.rs  dotfile_schema.json  git.rs  jtd-wrapper.sh  lib.rs  log.rs  main.rs  structs.rs  utils.rs
src/git/: operations.rs  remote.rs
src/structs/: config.rs  dotfile.rs  manifest.rs  metadata.rs  mod.rs
src/subcommands/: diff.rs  install.rs  interactive.rs  sync.rs
~/.config/noovim/: init.vim
