[package]
name = "jointhedots"
version = "0.0.6"
edition = "2018"
license = "MIT"
description = "A simple git-based dotfile manager written entirely in Rust!"
repository = "https://github.com/dob9601/jointhedots"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.0-rc.7", features = ["derive"] }
dialoguer = "0.8.0"
lazy_static = "1.4.0"
regex = "1.5.4"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
shellexpand = "2.1.0"
toml = "0.5"
