[package]
name = "jointhedots"
version = "0.0.10"
edition = "2018"
license = "MIT"
description = "A simple git-based dotfile manager written entirely in Rust!"
repository = "https://github.com/dob9601/jointhedots"

[[bin]]
name = "jtd"
path = "src/main.rs"

[dependencies]
clap = { version = "3.0.0-rc.7", features = ["derive"] }
console = "0.15.0"
dialoguer = "0.8.0"
indicatif = "0.16.2"
lazy_static = "1.4.0"
regex = "1.5.4"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
shellexpand = "2.1.0"
toml = "0.5"
