[package]
name = "jointhedots"
version = "0.0.15"
edition = "2018"
license = "MIT"
authors = ["Daniel O'Brien <dob9601@gmail.com>"]
description = "A simple git-based dotfile manager written entirely in Rust!"
repository = "https://github.com/dob9601/jointhedots"

[[bin]]
name = "jtd"
path = "src/main.rs"

[dependencies]
clap = { version = "3.0.0-rc.7", features = ["derive"] }
console = "0.15.0"
dialoguer = "0.8.0"
git2 = "0.14.2"
git2_credentials = "0.8.0"
hex = "0.4.3"
indicatif = "0.16.2"
lazy_static = "1.4.0"
regex = "1.5.4"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
sha-1 = "0.10.0"
strum = "0.23.0"
strum_macros = "0.23"
shellexpand = "2.1.0"
tempfile = "3"
toml = "0.5"
